--- a/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavapuu.html
@@ -318,8 +318,8 @@ YHTASUURI
                         <span>N parasta keskiarvo</span></td>
                 </tr>
                 <tr>
-                    <td ng-click="addNewFunktio(parent, 'NMAKSIMI', funktio.nimi())"><span>N maksimi</span></td>
-                    <td ng-click="addNewFunktio(parent, 'NMINIMI', funktio.nimi())"><span>N minimi</span></td>
+                    <td ng-click="addNewFunktio(parent, 'NMAKSIMI', funktio.nimi())"><span>N paras</span></td>
+                    <td ng-click="addNewFunktio(parent, 'NMINIMI', funktio.nimi())"><span>N huonoin</span></td>
                 </tr>
                 <tr>
                     <td ng-click="addNewFunktio(parent, 'NEGAATIO', funktio.nimi())"><span>Negaatio</span></td>
