--- a/src/main/webapp/html/valinnanvaihelomake.html
+++ b/src/main/webapp/html/valinnanvaihelomake.html
@@ -92,12 +92,12 @@
                 </tr>
             </tbody>    
         </table>
-        <span class="button small" ng-click="addJono()">Lisää jono</span>
+        <span class="button small" ng-click="addJono()"><i class="fa fa-plus"></i> Jono</span>
     </div>
 </div>
 <div class="clear"></div>
 
 
-<button ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
-<button class="button small float-left margin-right-1" ng-click="cancel()">Takaisin</button>
+<button ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
+<button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
 </form>
