--- a/src/main/webapp/html/valintakoelomake.html
+++ b/src/main/webapp/html/valintakoelomake.html
@@ -48,6 +48,6 @@
 
 <div class="clear"></div>
 
-<button ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
-<button class="button small float-left margin-right-1" ng-click="cancel()">Takaisin</button>
+<button ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
+<button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
 </form>
