--- a/src/main/webapp/html/jarjestyskriteeri.html
+++ b/src/main/webapp/html/jarjestyskriteeri.html
@@ -41,12 +41,12 @@
 
     <button ng-disabled="!form.$valid" class="button small primary" type="submit">
         <div ng-show="!model.jarjestyskriteeri.oid">
-            Lisää
+            <i class="fa fa-floppy-o"></i> Lisää
         </div>
         <div ng-show="model.jarjestyskriteeri.oid" >
-            Muokkaa
+            <i class="fa fa-floppy-o"></i> Muokkaa
         </div>
     </button>
 
-    <button class="button small float-left margin-right-2" ng-click="cancel()">Takaisin</button>
+    <button class="button small float-left margin-right-2" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
 </form>
