--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -14,9 +14,9 @@
 <div class="tabsheets">
     
     <!-- LASKENTAKAAVAN MUOKKAUS -->
-    <span class="button small" ng-click="goToListing()">Palaa listalle</span>
-    <span class="button small" ng-click="saveKaavaAsCompleted()">Tallenna valmiina</span>
-    <span class="button small" ng-click="saveKaavaAsDraft()">Tallenna luonnoksena</span>
+    <span class="button small" ng-click="goToListing()"><i class="fa fa-arrow-left"></i> Palaa listalle</span>
+    <span class="button small" ng-click="saveKaavaAsCompleted()"><i class="fa fa-floppy-o"></i> Tallenna valmiina</span>
+    <span class="button small" ng-click="saveKaavaAsDraft()"><i class="fa fa-floppy-o"></i> Tallenna luonnoksena</span>
 
 
 
