--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -129,7 +129,7 @@
                 </tr>
                 </tbody>
             </table>
-            <span class="button small" ng-click="addKriteeri()">Lisää kriteeri</span>
+            <span class="button small" ng-click="addKriteeri()"><i class="fa fa-plus"></i> Kriteeri</span>
             <!--<div><small>Jonojen muodostuskriteereihin liittyvä ohjeteksti.</small></div>-->
         </div>
         <span ng-show="!model.valintatapajono.oid">Tallenna jono lisätäksesi kriteeri.</span>
@@ -175,7 +175,7 @@
 
     <div class="clear"></div>
 
-    <button ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
-    <button class="button small float-left margin-right-1" ng-click="cancel()">Takaisin</button>
+    <button ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
+    <button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
     <div class="clear"></div>
 </form>
