VT-609: Käyttöoikeustarkistuksia käyttöliittymään

--- a/src/main/webapp/html/hakijaryhma.html
+++ b/src/main/webapp/html/hakijaryhma.html
@@ -92,7 +92,7 @@
 
     <button class="button small float-left margin-right-2" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
     </button>
-    <button ng-disabled="!form.$valid" class="button small primary" type="submit">
+    <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit">
         <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
             Lisää
         </div>
