--- a/src/main/webapp/html/hakijaryhmaValintatapajono.html
+++ b/src/main/webapp/html/hakijaryhmaValintatapajono.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="form-row">
-        <button ng-disabled="!form.$valid" class="button small primary" type="submit">
+        <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit">
                 Liitä
         </button>
 
