--- a/src/main/webapp/html/hakukohde_uusi.html
+++ b/src/main/webapp/html/hakukohde_uusi.html
@@ -71,7 +71,7 @@
         <div class="clear"></div>
     </div>
 
-    <button ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
+    <button auth="crud" ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
     <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()">Takaisin</button>
 </form>
 </div>
