--- a/src/main/webapp/html/jarjestyskriteeri.html
+++ b/src/main/webapp/html/jarjestyskriteeri.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <button ng-disabled="!form.$valid" class="button small primary" type="submit">
+    <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit">
         <div ng-show="!model.jarjestyskriteeri.oid">
             <i class="fa fa-floppy-o"></i> Lisää
         </div>
