--- a/src/main/webapp/html/valintakoelomake.html
+++ b/src/main/webapp/html/valintakoelomake.html
@@ -52,7 +52,7 @@
 
     <div class="clear"></div>
 
-    <button ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i>
+    <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i>
         Tallenna
     </button>
     <button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
