--- a/src/main/webapp/html/valinnanvaihelomake.html
+++ b/src/main/webapp/html/valinnanvaihelomake.html
@@ -88,18 +88,18 @@
                     </td>
                     <td>{{'valintaperusteet.periytyy.' + jono.inheritance | i18n}}</td>
                     <td class="align-center">
-                        <span ng-show="!jono.inheritance" class="btn remove" ng-click="model.remove(jono)"></span>
+                        <span auth="crud" ng-show="!jono.inheritance" class="btn remove" ng-click="model.remove(jono)"></span>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <span class="button small" ng-click="addJono()"><i class="fa fa-plus"></i> Jono</span>
+            <span auth="crud" class="button small" ng-click="addJono()"><i class="fa fa-plus"></i> Jono</span>
         </div>
     </div>
     <div class="clear"></div>
 
 
-    <button ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i>
+    <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i>
         Tallenna
     </button>
     <button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
