--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery.nestable.js"></script>
     <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery.i18n.properties-min-1.0.9.js"></script>
+    <script type="text/javascript" src="../jslib/lodash.js"></script>
     <script type="text/javascript" src="../jslib/angular-1.2.2/angular.js"></script>
     <script type="text/javascript" src="../jslib/angular-1.2.2/angular-resource.js"></script>
     <script type="text/javascript" src="../jslib/angular-1.2.2/angular-route.js"></script>
